--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
   /* LEFT AREA */
   .left{ padding-right:8px; padding-top: 80px; }
   .kicker{
-    font-weight:700;
+    font-weight:750;
     letter-spacing:2px;
     text-transform:uppercase;
     color:var(--accent-blue);
-    font-size:12px;
+    font-size:16px;
     margin-bottom:12px;
     opacity:0.98;
   }
@@ -175,7 +175,7 @@
 
     <!-- Logo on the right side -->
     <div class="logo-box">
-      <img src="../assets/logo.png" alt="Zarkka Logo">
+      <img src="assets/logo.png" alt="Zarkka Logo">
     </div>
   </div>
 </body>
